@@ -1,3 +1,10 @@
+2002-04-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* include/bits/locale_facets.h (__num_base::_S_scale_hex): Remove.
+	(__num_base::_S_scale_oct): Remove.
+	* src/locale.cc (__num_base::_S_scale_hex): Remove.
+	(__num_base::_S_scale_oct): Remove.
+
 2002-04-09  Benjamin Kosnik  <bkoz@redhat.com>
 
 	libstdc++/6124
